# toolkit

cpuloader/: settings.gradle.kts
cpuloader/app/: build.gradle.kts
cpuloader/app/src/androidTest/java/com/example/cpuloader/: ExampleInstrumentedTest.java
cpuloader/app/src/main/: AndroidManifest.xml
cpuloader/app/src/main/cpp/: CMakeLists.txt  cpu_loader.cpp  cpu_loader.h  gpu_loader.cpp  gpu_loader.h
cpuloader/app/src/main/cpp/shaders/: cloud.frag  cloud.vert
cpuloader/app/src/main/java/com/example/cpuloader/: MainActivity.java
cpuloader/app/src/main/res/layout/: activity_main.xml
cpuloader/app/src/main/res/values/: strings.xml  themes.xml
cpuloader/app/src/main/res/values-night/: themes.xml
cpuloader/app/src/test/java/com/example/cpuloader/: ExampleUnitTest.java
cpuloader/gradle/wrapper/: gradle-wrapper.properties
